Started to make the page look nice

--- a/Kingdom-Keys-Re-Coded.html
+++ b/Kingdom-Keys-Re-Coded.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Wehavecookies56</title>
+  <title>Kingdom Keys Re:Coded</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -24,11 +24,11 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav nav-justified">
-          <li class="active"><a href="#">Home</a></li>
-          <li class="dropdown">
+          <li><a href="index.html">Home</a></li>
+          <li class="dropdown active">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="Kingdom-Keys-Re-Coded.html">Kingdom Keys Re:Coded</a></li>
+            <li class="active"><a href="#">Kingdom Keys Re:Coded</a></li>
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
@@ -44,7 +44,7 @@
   </nav>
   <div class="body-header">
     <div class="container">
-      <h2>Testing</h2>
+      <h2>Kingdom Keys Re:Coded</h2>
       <p>Welcome to this test page!</p>
     </div>
   </div>
