--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="Kingdom-Keys-Re-Coded.html">Kingdom Keys Re:Coded</a></li>
+            <li><a href="wehavecookies56.github.io/Kingdom-Keys-Re-Coded">Kingdom Keys Re:Coded</a></li>
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
